--- a/Lab2/Lab2.vcxproj.filters
+++ b/Lab2/Lab2.vcxproj.filters
@@ -32,7 +32,7 @@
     <ClInclude Include="Game.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="Args.h">
+    <ClInclude Include="FileArgs.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
